--- a/TV Onward Journey Navigation.Rmd
+++ b/TV Onward Journey Navigation.Rmd
@@ -54,6 +54,102 @@ The project was looking at the onward naviagtion bar on iPlayer big screen that 
 The time period analysed was 2020-01-15 to 2020-01-29 and all visits to big screen where the navigation bar was click were included. During this time there were 4,065,977 (~8.5%) visits containing at least one click and 43,824,893 (~91.5%) without a click. The click was identified by the labels 'page-section-related~select' and 'page-section-rec~select' in the attribute field of the s3_audience.publosher table in SCV. Of all clicks identified 15% were to the recommended section and 85% to the related section.
 
 # Click Origin
+
+
+```{r contentOriginsData, echo=FALSE}
+allClickOrigins<- read.csv("allContentClickOrigins.csv", header = TRUE)
+allClickOrigins$placement<- recode(allClickOrigins$placement, 
+                                                 'categories_page_kids' = 'categories',
+                                                 'categories_page_not_kids' = 'categories',
+                                                 'tleo_page' = 'tleo',
+                                                 'channel_page' = 'channels',
+                                                 'search_page' = 'search',
+                                                 'other_page' = 'other',
+                                                 'episode_page' = 'episode')
+
+allClickOrigins$placement<- factor(allClickOrigins$placement,
+                                   levels =c('homepage', 'tleo', 'episode', 'channels', 'categories', 'deeplink', 'search', 'other') )
+
+# Read in click origins for content where the nav was then clicked and set names
+navClickOrigins<- read.csv("navContentClickOrigins.csv", header = TRUE)
+navClickOrigins$content_click_placement<- recode(navClickOrigins$content_click_placement, 
+                                                 'categories_page_kids' = 'categories',
+                                                 'categories_page_not_kids' = 'categories',
+                                                 'tleo_page' = 'tleo',
+                                                 'channel_page' = 'channels',
+                                                 'search_page' = 'search',
+                                                 'other_page' = 'other',
+                                                 'episode_page' = 'episode')
+
+navClickOrigins$content_click_placement<- factor(navClickOrigins$content_click_placement, 
+                                                 levels =c('homepage', 'tleo', 'episode', 'channels', 'categories', 'deeplink', 'search', 'other') )
+
+
+#nextEpInfo <- nextEpInfo %>% rename(clickTime_sec = time_since_content_start_sec)
+
+###### How does the route to content differ for those where the nav was clicked?
+navClickPlacement <- navClickOrigins %>% 
+  group_by(content_click_placement) %>%
+  summarise(numEvents = n()) %>%
+  arrange(desc(numEvents)) %>%
+  mutate(perc = round(100*numEvents/sum(numEvents),1))
+navClickPlacement$placement<- navClickPlacement$content_click_placement 
+navClickPlacement <- navClickPlacement %>% select(placement, numEvents,perc)
+
+allClickPlacement <- allClickOrigins %>% 
+  group_by(placement) %>%
+  summarise(numEvents = sum(num_content_clicks)) %>%
+  arrange(desc(numEvents)) %>%
+  mutate(perc = round(100*numEvents/sum(numEvents),1))
+
+clickPlacementComparison <- bind_rows(
+  allClickPlacement %>% mutate(clickGroup = 'allContent'),
+  navClickPlacement %>% mutate(clickGroup = 'navClick'))
+
+
+```
+
+
+For each piece of content being viewed when the onward journey navigation was clicked, the origin of the content was found. This was the page where the click to reach content occurred, for example the homepage, a channel page or a TLEO page. Content currently being viewed could also be the origin for another piece of content; in these examples the content origin was classified as as 'episode' page. Deep links into product were also a source. 
+
+```{r contentOriginsGraph, echo=FALSE, fig.height = 7, fig.width = 10}
+## Plot data
+ggplot(clickPlacementComparison, aes(x = clickGroup, y = perc, fill = clickGroup)) +
+  geom_bar(stat = "Identity", position = position_dodge(width = 1) )+
+  scale_y_continuous(limits = c(0,50), breaks = c(0,5,10,15,20,25,30,35,40,45,50), 
+                     labels = c(0,5,10,15,20,25,30,35,40,45,50))+
+  scale_fill_manual(values = c("#043570", "#037301"), name = "Click Group", labels = c("All Content", "Nav Click Content"))+
+  ylab("Percentage of Content CLicks from Each Origin")+
+  xlab("Content Origin Page")+
+  ggtitle("Routes to Content Comparison \n PS_IPLAYER - Big Screen - 2020-01-15 to 2020-01-29")+
+  #scale_fill_discrete(name = "Click Group", labels = c("All Content", "Nav Click Content"))+
+  geom_hline(yintercept = 5, linetype = "dashed")+
+  geom_text(data=subset(clickPlacementComparison, perc > 20),
+             aes(label=paste0(sprintf("%1.0f", perc),"%"),),
+             position = position_dodge(width = 1),
+             vjust = -0.5,
+             colour="black")+
+  facet_wrap(~ placement, nrow = 1, strip.position = "bottom")+
+  theme(axis.text.x=element_blank(),
+        axis.ticks.x=element_blank())
+```
+
+
+
+
+```{r contentPercentages, echo = FALSE}
+kable(clickPlacementComparison %>% 
+        select(-numEvents) %>%
+        spread(key = clickGroup, value = perc)%>%
+        arrange(desc(allContent)), 
+      row.names = FALSE, 
+      col.names = c("Content Origin", "Percentage of \n All Content Origins","Percentage of \n Nav Click Content Origins")) %>% 
+  kable_styling(bootstrap_options = c("striped", "hover"), full_width = F) 
+
+```
+
+
+
 # Click Destination
 
 The hypothesis suggested that users were clicking the navigation bar as a shortcut to find their desired content so the content their click took them to was compared to the initial content. Content was split into several categories: content of a different brand entirely, content of the same brand and same series, within this if it was the next episode or not, and content of the same brand but another series again within this splitting into if content was the next episode (i.e first of a new series) or not.
@@ -142,7 +238,7 @@ The number of clicks faling within each minute was counted and is displayed belo
 
 ```{r timeToClickGraph, echo = FALSE}
   ggplot(data = clickTimeMinutes, aes(x=timeRange_sec, y=numInRange))+
-    geom_bar(stat = "identity", fill = "blue")+
+    geom_bar(stat = "identity", fill = "#043570") +
     scale_y_continuous(limits = c(0,5000000), breaks = c(0,250000, 1000000,2000000,3000000,4000000,5000000), labels = c(0,0.25, 1,2,3,4,5))+
     ylab("Number of Visits with Click in Time Range (millions)")+
     xlab("Time Range (mins)")+
@@ -156,7 +252,7 @@ The number of clicks faling within each minute was counted and is displayed belo
                position = position_stack(vjust = 1.6),
                colour="black")+
     ggtitle("Number of Clicks to the Onward Journey Panel 'x' Minutes After Content Start \n PS_IPLAYER - Big Screen - 2019-11-01 to 2019-11-14" )+
-  theme_classic() 
+  theme_classic()
 
 
 
