--- a/TV Onward Journey Navigation.Rmd
+++ b/TV Onward Journey Navigation.Rmd
@@ -110,7 +110,7 @@ clickPlacementComparison <- bind_rows(
 ```
 
 
-For each piece of content being viewed when the onward journey navigation was clicked, the origin of the content was found. This was the page where the click to reach content occurred, for example the homepage, a channel page or a TLEO page. Content currently being viewed could also be the origin for another piece of content; in these examples the content origin was classified as as 'episode' page. Deep links into product were also a source. 
+For each piece of content being viewed when the onward journey navigation was clicked, the origin of the content was found. This was the page where the click to reach content occurred, for example the homepage, a channel page or a TLEO page. Content currently being viewed could also be the origin for another piece of content; in these examples the content origin was classified as as 'episode' page. Deep links into product were also a source. It is worth noting that homepage clicks are only those that take users directly into content, such as the continue watching rail, many click on the homepage would take users to a TLEO from which they select content. 
 
 ```{r contentOriginsGraph, echo=FALSE, fig.height = 7, fig.width = 10}
 ## Plot data
@@ -118,7 +118,7 @@ ggplot(clickPlacementComparison, aes(x = clickGroup, y = perc, fill = clickGroup
   geom_bar(stat = "Identity", position = position_dodge(width = 1) )+
   scale_y_continuous(limits = c(0,50), breaks = c(0,5,10,15,20,25,30,35,40,45,50), 
                      labels = c(0,5,10,15,20,25,30,35,40,45,50))+
-  scale_fill_manual(values = c("#043570", "#037301"), name = "Click Group", labels = c("All Content", "Nav Click Content"))+
+  scale_fill_manual(values = c("#037301","#043570"), name = "Click Group", labels = c("All Content", "Nav Click Content"))+
   ylab("Percentage of Content CLicks from Each Origin")+
   xlab("Content Origin Page")+
   ggtitle("Routes to Content Comparison \n PS_IPLAYER - Big Screen - 2020-01-15 to 2020-01-29")+
@@ -134,9 +134,6 @@ ggplot(clickPlacementComparison, aes(x = clickGroup, y = perc, fill = clickGroup
         axis.ticks.x=element_blank())
 ```
 
-
-
-
 ```{r contentPercentages, echo = FALSE}
 kable(clickPlacementComparison %>% 
         select(-numEvents) %>%
@@ -148,7 +145,69 @@ kable(clickPlacementComparison %>%
 
 ```
 
+Users clicking the onward navigation bar are more likely to have arrived at the content from the homepage, channels pages and categories pages than those not using the navigation bar. This is most likely because those pages take users directly into one specific episode which was not the one users wanted. For example if a user has previously watched episode one of a series the continue watching rail on hompage will present them episode two, but if the user is on a channel page clicking the series title will take them to episode one, even though the system knows they've watched episode one.
 
+Users clicking the navigation bar are less likely to have come from another episode than user's not clicking the bar. This is most likely because users coming from an episode are auto-playing the next episode
+
+
+
+```{r episodeOriginsGraph, echo = FALSE, fig.width = 10}
+### How are users from an episode page getting to the next content
+episodeOrigins<- left_join(
+navClickOrigins %>% filter(content_click_placement== 'episode') %>%
+  group_by(content_click_container) %>%
+  summarise(numEvents = n()) %>%
+  mutate(navPerc = round(numEvents/sum(numEvents),3))%>% 
+  select(-numEvents),
+allClickOrigins %>% filter(placement == 'episode') %>%
+  group_by(simple_container_name) %>%
+  summarise(numEvents = sum(num_content_clicks)) %>%
+  mutate(allPerc = round(numEvents/sum(numEvents),3))%>%
+  select(-numEvents), by= c("content_click_container"="simple_container_name"))
+
+episodeOrigins<- episodeOrigins%>%rename(container = content_click_container)
+
+episodeOrigins<- gather(data= episodeOrigins, key = "clickGroup", value = "perc", navPerc, allPerc)
+episodeOrigins$container<-factor(episodeOrigins$container, 
+                                 levels = c("page-section-rec",
+                                            "onward-journey-autoplay-next-rec",
+                                            "page-section-related",
+                                            "onward-journey-autoplay-next-episode"))
+
+episodeOrigins$container<- recode(episodeOrigins$container, 
+                                  "page-section-rec" = 'Nav Click - Rec',
+                                    "onward-journey-autoplay-next-rec" = 'Autoplay - Rec',
+                                    "page-section-related" = 'Nav Click - Related',
+                                    "onward-journey-autoplay-next-episode" = 'Autoplay - Related')
+                                  
+
+
+
+ggplot(data = episodeOrigins, aes(x = clickGroup, y = perc, fill = clickGroup)) +
+  geom_bar(stat= "identity", position = "fill", width=1, color="black", aes(alpha=container))+
+  scale_alpha_manual(values=c(0.25,0.5,0.75,1.0), name = "Click Type Colour Scale")+
+  scale_y_continuous(labels=percent_format())+
+  geom_text(data=subset(episodeOrigins, perc > 0.05),
+            aes(label=paste0(sprintf("%1.f", 100*perc,"%")),
+                group = container),
+            position = position_stack(vjust = 0.5),
+            colour="black")+
+  coord_cartesian(ylim = c(0, 1))+
+  ylab("Percentage of Content Clicks from Each Type")+
+  scale_x_discrete(name = "Click Group", labels= c("All Content", "Nav Click Content"))+
+  ggtitle("Type of Click Taking Users From One Episode Page to Another  \n PS_IPLAYER - Big Screen - 2020-01-15 to 2020-01-29")+
+  scale_fill_manual(values =c( "#037301","#043570"))+
+  #scale_fill_brewer(name = "Container",
+   #                 palette = "Blues", direction = -1)+
+  theme(legend.position="bottom", legend.box = "horizontal")+
+  guides(fill = "none") #this removed the legend for scale_fill_manual
+```
+
+Of those people who leave content via the navigation bar, 50% + 15% arrived using the navigation bar. Normally only 10+4% use that to get from one episode to another. 
+If they use the nav bar to get to content, they're very likely to use it again. 
+So if they use it, they're big users.
+
+Maybe for this graph we only need the % of those using the nav bar. 
 
 # Click Destination
 
