--- a/TV Onward Journey Navigation.Rmd
+++ b/TV Onward Journey Navigation.Rmd
@@ -2,11 +2,11 @@
 title: "TV Onward Navigation Bar Journeys"
 author: "VickyBanks"
 date: "03/02/2020"
-output: 
+output:
   html_document:
-  toc_float: true
-  toc: true
-  theme: cerulean
+    toc_float: true
+    toc: true
+    theme: cerulean
 ---
 
 ```{r setup, include=FALSE}
@@ -53,161 +53,6 @@ The project was looking at the onward naviagtion bar on iPlayer big screen that 
 
 The time period analysed was 2020-01-15 to 2020-01-29 and all visits to big screen where the navigation bar was click were included. During this time there were 4,065,977 (~8.5%) visits containing at least one click and 43,824,893 (~91.5%) without a click. The click was identified by the labels 'page-section-related~select' and 'page-section-rec~select' in the attribute field of the s3_audience.publosher table in SCV. Of all clicks identified 15% were to the recommended section and 85% to the related section.
 
-# Click Origin
-
-
-```{r contentOriginsData, echo=FALSE}
-allClickOrigins<- read.csv("allContentClickOrigins.csv", header = TRUE)
-allClickOrigins$placement<- recode(allClickOrigins$placement, 
-                                                 'categories_page_kids' = 'categories',
-                                                 'categories_page_not_kids' = 'categories',
-                                                 'tleo_page' = 'tleo',
-                                                 'channel_page' = 'channels',
-                                                 'search_page' = 'search',
-                                                 'other_page' = 'other',
-                                                 'episode_page' = 'episode')
-
-allClickOrigins$placement<- factor(allClickOrigins$placement,
-                                   levels =c('homepage', 'tleo', 'episode', 'channels', 'categories', 'deeplink', 'search', 'other') )
-
-# Read in click origins for content where the nav was then clicked and set names
-navClickOrigins<- read.csv("navContentClickOrigins.csv", header = TRUE)
-navClickOrigins$content_click_placement<- recode(navClickOrigins$content_click_placement, 
-                                                 'categories_page_kids' = 'categories',
-                                                 'categories_page_not_kids' = 'categories',
-                                                 'tleo_page' = 'tleo',
-                                                 'channel_page' = 'channels',
-                                                 'search_page' = 'search',
-                                                 'other_page' = 'other',
-                                                 'episode_page' = 'episode')
-
-navClickOrigins$content_click_placement<- factor(navClickOrigins$content_click_placement, 
-                                                 levels =c('homepage', 'tleo', 'episode', 'channels', 'categories', 'deeplink', 'search', 'other') )
-
-
-#nextEpInfo <- nextEpInfo %>% rename(clickTime_sec = time_since_content_start_sec)
-
-###### How does the route to content differ for those where the nav was clicked?
-navClickPlacement <- navClickOrigins %>% 
-  group_by(content_click_placement) %>%
-  summarise(numEvents = n()) %>%
-  arrange(desc(numEvents)) %>%
-  mutate(perc = round(100*numEvents/sum(numEvents),1))
-navClickPlacement$placement<- navClickPlacement$content_click_placement 
-navClickPlacement <- navClickPlacement %>% select(placement, numEvents,perc)
-
-allClickPlacement <- allClickOrigins %>% 
-  group_by(placement) %>%
-  summarise(numEvents = sum(num_content_clicks)) %>%
-  arrange(desc(numEvents)) %>%
-  mutate(perc = round(100*numEvents/sum(numEvents),1))
-
-clickPlacementComparison <- bind_rows(
-  allClickPlacement %>% mutate(clickGroup = 'allContent'),
-  navClickPlacement %>% mutate(clickGroup = 'navClick'))
-
-
-```
-
-
-For each piece of content being viewed when the onward journey navigation was clicked, the origin of the content was found. This was the page where the click to reach content occurred, for example the homepage, a channel page or a TLEO page. Content currently being viewed could also be the origin for another piece of content; in these examples the content origin was classified as as 'episode' page. Deep links into product were also a source. It is worth noting that homepage clicks are only those that take users directly into content, such as the continue watching rail, many click on the homepage would take users to a TLEO from which they select content. 
-
-```{r contentOriginsGraph, echo=FALSE, fig.height = 7, fig.width = 10}
-## Plot data
-ggplot(clickPlacementComparison, aes(x = clickGroup, y = perc, fill = clickGroup)) +
-  geom_bar(stat = "Identity", position = position_dodge(width = 1) )+
-  scale_y_continuous(limits = c(0,50), breaks = c(0,5,10,15,20,25,30,35,40,45,50), 
-                     labels = c(0,5,10,15,20,25,30,35,40,45,50))+
-  scale_fill_manual(values = c("#037301","#043570"), name = "Click Group", labels = c("All Content", "Nav Click Content"))+
-  ylab("Percentage of Content CLicks from Each Origin")+
-  xlab("Content Origin Page")+
-  ggtitle("Routes to Content Comparison \n PS_IPLAYER - Big Screen - 2020-01-15 to 2020-01-29")+
-  #scale_fill_discrete(name = "Click Group", labels = c("All Content", "Nav Click Content"))+
-  geom_hline(yintercept = 5, linetype = "dashed")+
-  geom_text(data=subset(clickPlacementComparison, perc > 20),
-             aes(label=paste0(sprintf("%1.0f", perc),"%"),),
-             position = position_dodge(width = 1),
-             vjust = -0.5,
-             colour="black")+
-  facet_wrap(~ placement, nrow = 1, strip.position = "bottom")+
-  theme(axis.text.x=element_blank(),
-        axis.ticks.x=element_blank())
-```
-
-```{r contentPercentages, echo = FALSE}
-kable(clickPlacementComparison %>% 
-        select(-numEvents) %>%
-        spread(key = clickGroup, value = perc)%>%
-        arrange(desc(allContent)), 
-      row.names = FALSE, 
-      col.names = c("Content Origin", "Percentage of \n All Content Origins","Percentage of \n Nav Click Content Origins")) %>% 
-  kable_styling(bootstrap_options = c("striped", "hover"), full_width = F) 
-
-```
-
-Users clicking the onward navigation bar are more likely to have arrived at the content from the homepage, channels pages and categories pages than those not using the navigation bar. This is most likely because those pages take users directly into one specific episode which was not the one users wanted. For example if a user has previously watched episode one of a series the continue watching rail on hompage will present them episode two, but if the user is on a channel page clicking the series title will take them to episode one, even though the system knows they've watched episode one.
-
-Users clicking the navigation bar are less likely to have come from another episode than user's not clicking the bar. This is most likely because users coming from an episode are auto-playing the next episode
-
-
-
-```{r episodeOriginsGraph, echo = FALSE, fig.width = 10}
-### How are users from an episode page getting to the next content
-episodeOrigins<- left_join(
-navClickOrigins %>% filter(content_click_placement== 'episode') %>%
-  group_by(content_click_container) %>%
-  summarise(numEvents = n()) %>%
-  mutate(navPerc = round(numEvents/sum(numEvents),3))%>% 
-  select(-numEvents),
-allClickOrigins %>% filter(placement == 'episode') %>%
-  group_by(simple_container_name) %>%
-  summarise(numEvents = sum(num_content_clicks)) %>%
-  mutate(allPerc = round(numEvents/sum(numEvents),3))%>%
-  select(-numEvents), by= c("content_click_container"="simple_container_name"))
-
-episodeOrigins<- episodeOrigins%>%rename(container = content_click_container)
-
-episodeOrigins<- gather(data= episodeOrigins, key = "clickGroup", value = "perc", navPerc, allPerc)
-episodeOrigins$container<-factor(episodeOrigins$container, 
-                                 levels = c("page-section-rec",
-                                            "onward-journey-autoplay-next-rec",
-                                            "page-section-related",
-                                            "onward-journey-autoplay-next-episode"))
-
-episodeOrigins$container<- recode(episodeOrigins$container, 
-                                  "page-section-rec" = 'Nav Click - Rec',
-                                    "onward-journey-autoplay-next-rec" = 'Autoplay - Rec',
-                                    "page-section-related" = 'Nav Click - Related',
-                                    "onward-journey-autoplay-next-episode" = 'Autoplay - Related')
-                                  
-
-
-
-ggplot(data = episodeOrigins, aes(x = clickGroup, y = perc, fill = clickGroup)) +
-  geom_bar(stat= "identity", position = "fill", width=1, color="black", aes(alpha=container))+
-  scale_alpha_manual(values=c(0.25,0.5,0.75,1.0), name = "Click Type Colour Scale")+
-  scale_y_continuous(labels=percent_format())+
-  geom_text(data=subset(episodeOrigins, perc > 0.05),
-            aes(label=paste0(sprintf("%1.f", 100*perc,"%")),
-                group = container),
-            position = position_stack(vjust = 0.5),
-            colour="black")+
-  coord_cartesian(ylim = c(0, 1))+
-  ylab("Percentage of Content Clicks from Each Type")+
-  scale_x_discrete(name = "Click Group", labels= c("All Content", "Nav Click Content"))+
-  ggtitle("Type of Click Taking Users From One Episode Page to Another  \n PS_IPLAYER - Big Screen - 2020-01-15 to 2020-01-29")+
-  scale_fill_manual(values =c( "#037301","#043570"))+
-  #scale_fill_brewer(name = "Container",
-   #                 palette = "Blues", direction = -1)+
-  theme(legend.position="bottom", legend.box = "horizontal")+
-  guides(fill = "none") #this removed the legend for scale_fill_manual
-```
-
-Of those people who leave content via the navigation bar, 50% + 15% arrived using the navigation bar. Normally only 10+4% use that to get from one episode to another. 
-If they use the nav bar to get to content, they're very likely to use it again. 
-So if they use it, they're big users.
-
-Maybe for this graph we only need the % of those using the nav bar. 
 
 # Click Destination
 
@@ -372,4 +217,206 @@ ggplot(data = nextEpInfoMins, aes(x=timeRange_sec, y=numInRange/1000000, fill = 
 
 
 ```
+
+
+# Click Origin
+
+
+```{r contentOriginsData, echo=FALSE}
+allClickOrigins<- read.csv("allContentClickOrigins.csv", header = TRUE)
+allClickOrigins$placement<- recode(allClickOrigins$placement, 
+                                                 'categories_page_kids' = 'categories',
+                                                 'categories_page_not_kids' = 'categories',
+                                                 'tleo_page' = 'tleo',
+                                                 'channel_page' = 'channels',
+                                                 'search_page' = 'search',
+                                                 'other_page' = 'other',
+                                                 'episode_page' = 'episode')
+
+allClickOrigins$placement<- factor(allClickOrigins$placement,
+                                   levels =c('homepage', 'tleo', 'episode', 'channels', 'categories', 'deeplink', 'search', 'other') )
+
+# Read in click origins for content where the nav was then clicked and set names
+navClickOrigins<- read.csv("navContentClickOrigins.csv", header = TRUE)
+navClickOrigins$content_click_placement<- recode(navClickOrigins$content_click_placement, 
+                                                 'categories_page_kids' = 'categories',
+                                                 'categories_page_not_kids' = 'categories',
+                                                 'tleo_page' = 'tleo',
+                                                 'channel_page' = 'channels',
+                                                 'search_page' = 'search',
+                                                 'other_page' = 'other',
+                                                 'episode_page' = 'episode')
+
+navClickOrigins$content_click_placement<- factor(navClickOrigins$content_click_placement, 
+                                                 levels =c('homepage', 'tleo', 'episode', 'channels', 'categories', 'deeplink', 'search', 'other') )
+
+
+#nextEpInfo <- nextEpInfo %>% rename(clickTime_sec = time_since_content_start_sec)
+
+###### How does the route to content differ for those where the nav was clicked?
+navClickPlacement <- navClickOrigins %>% 
+  group_by(content_click_placement) %>%
+  summarise(numEvents = n()) %>%
+  arrange(desc(numEvents)) %>%
+  mutate(perc = round(100*numEvents/sum(numEvents),1))
+navClickPlacement$placement<- navClickPlacement$content_click_placement 
+navClickPlacement <- navClickPlacement %>% select(placement, numEvents,perc)
+
+allClickPlacement <- allClickOrigins %>% 
+  group_by(placement) %>%
+  summarise(numEvents = sum(num_content_clicks)) %>%
+  arrange(desc(numEvents)) %>%
+  mutate(perc = round(100*numEvents/sum(numEvents),1))
+
+clickPlacementComparison <- bind_rows(
+  allClickPlacement %>% mutate(clickGroup = 'allContent'),
+  navClickPlacement %>% mutate(clickGroup = 'navClick'))
+
+
+```
+
+
+For each piece of content being viewed when the onward journey navigation was clicked, the origin of the content was found. This was the page where the click to reach content occurred, for example the homepage, a channel page or a TLEO page. Content currently being viewed could also be the origin for another piece of content; in these examples the content origin was classified as as 'episode' page. Deep links into product were also a source. It is worth noting that homepage clicks are only those that take users directly into content, such as the continue watching rail, many click on the homepage would take users to a TLEO from which they select content. 
+
+```{r contentOriginsGraph, echo=FALSE, fig.height = 7, fig.width = 10}
+## Plot data
+ggplot(clickPlacementComparison, aes(x = clickGroup, y = perc, fill = clickGroup)) +
+  geom_bar(stat = "Identity", position = position_dodge(width = 1) )+
+  scale_y_continuous(limits = c(0,50), breaks = c(0,5,10,15,20,25,30,35,40,45,50), 
+                     labels = c(0,5,10,15,20,25,30,35,40,45,50))+
+  scale_fill_manual(values = c("#037301","#043570"), name = "Click Group", labels = c("All Content", "Nav Click Content"))+
+  ylab("Percentage of Content CLicks from Each Origin")+
+  xlab("Content Origin Page")+
+  ggtitle("Routes to Content Comparison \n PS_IPLAYER - Big Screen - 2020-01-15 to 2020-01-29")+
+  #scale_fill_discrete(name = "Click Group", labels = c("All Content", "Nav Click Content"))+
+  geom_hline(yintercept = 5, linetype = "dashed")+
+  geom_text(data=subset(clickPlacementComparison, perc > 20),
+             aes(label=paste0(sprintf("%1.0f", perc),"%"),),
+             position = position_dodge(width = 1),
+             vjust = -0.5,
+             colour="black")+
+  facet_wrap(~ placement, nrow = 1, strip.position = "bottom")+
+  theme(axis.text.x=element_blank(),
+        axis.ticks.x=element_blank())
+```
+
+```{r contentPercentages, echo = FALSE}
+# kable(clickPlacementComparison %>% 
+#         select(-numEvents) %>%
+#         spread(key = clickGroup, value = perc)%>%
+#         arrange(desc(allContent)), 
+#       row.names = FALSE, 
+#       col.names = c("Content Origin", "Percentage of \n All Content Origins","Percentage of \n Nav Click Content Origins")) %>% 
+#   kable_styling(bootstrap_options = c("striped", "hover"), full_width = F) 
+
+```
+
+## Homepage
+
+Users clicking the onward navigation bar are more likely to have arrived at the content from the homepage than users not using the navigation bar. The most likely route to content is through the 'continue watching' module followed by the 'editorial featured' module, but for those using the navigation bar the proportion coming form 'continue watching' is far higher.
+
+
+```{r homepageClickBreakdown, echo = FALSE}
+homepageAllClicks<- allClickOrigins %>% filter(placement == 'homepage' & 
+                                                 !str_detect(simple_container_name, "u16|u13")) %>%
+  group_by(placement, simple_container_name) %>%
+  summarise(numClicks = sum(num_content_clicks)) %>%
+  mutate(perc = round(100*numClicks/sum(numClicks),2), clickGroup = "allClicks") %>%
+  arrange(desc(perc))%>%
+  rename(container = simple_container_name)
+
+homepageNavClicks<- navClickOrigins %>% filter(content_click_placement == 'homepage' & 
+                                                 !str_detect(content_click_container, "u16|u13")) %>%
+  group_by(content_click_placement, content_click_container) %>%
+  summarise(numClicks = n()) %>%
+  mutate(perc = round(100*numClicks/sum(numClicks),2), clickGroup = "navClicks") %>%
+  arrange(desc(perc))%>% 
+  rename(container = content_click_container, placement = content_click_placement)
+
+
+fancyContainerName<- read.csv("fancyContainerName.csv", header = TRUE)
+homepageComparison<- bind_rows(homepageNavClicks, homepageAllClicks)
+homepageTable <- left_join(homepageComparison %>% 
+                             filter(clickGroup == "navClicks")%>% 
+                             top_n(n=10,wt = perc) %>% 
+                             select(container),
+                           homepageComparison %>% 
+                             select(-numClicks, -placement)) %>% 
+  spread(key = clickGroup, value = perc) %>%
+  arrange(desc(allClicks))
+homepageTable <- left_join(homepageTable, fancyContainerName, by = "container") %>% 
+  select(placement,fancy_container_name,allClicks,navClicks)
+
+kable(homepageTable, 
+      row.names = FALSE, 
+      col.names = c("Page", "Module", "All Content", "Nav Click Content")) %>% 
+  kable_styling(bootstrap_options = c("striped", "hover"), full_width = F) %>%
+add_header_above(header = c(" " = 2, "Percentage of clicks" = 2))
+```
+
+
+
+Users clicking the onward navigation bar are more likely to have arrived at the content from the homepage, channels pages and categories pages than those not using the navigation bar. This is most likely because those pages take users directly into one specific episode which was not the one users wanted. For example if a user has previously watched episode one of a series the continue watching rail on hompage will present them episode two, but if the user is on a channel page clicking the series title will take them to episode one, even though the system knows they've watched episode one.
+
+Users clicking the navigation bar are less likely to have come from another episode than user's not clicking the bar. This is most likely because users coming from an episode are auto-playing the next episode
+
+
+
+```{r episodeOriginsGraph, echo = FALSE, fig.width = 10}
+### How are users from an episode page getting to the next content
+episodeOrigins<- left_join(
+navClickOrigins %>% filter(content_click_placement== 'episode') %>%
+  group_by(content_click_container) %>%
+  summarise(numEvents = n()) %>%
+  mutate(navPerc = round(numEvents/sum(numEvents),3))%>% 
+  select(-numEvents),
+allClickOrigins %>% filter(placement == 'episode') %>%
+  group_by(simple_container_name) %>%
+  summarise(numEvents = sum(num_content_clicks)) %>%
+  mutate(allPerc = round(numEvents/sum(numEvents),3))%>%
+  select(-numEvents), by= c("content_click_container"="simple_container_name"))
+
+episodeOrigins<- episodeOrigins%>%rename(container = content_click_container)
+
+episodeOrigins<- gather(data= episodeOrigins, key = "clickGroup", value = "perc", navPerc, allPerc)
+episodeOrigins$container<-factor(episodeOrigins$container, 
+                                 levels = c("page-section-rec",
+                                            "onward-journey-autoplay-next-rec",
+                                            "page-section-related",
+                                            "onward-journey-autoplay-next-episode"))
+
+episodeOrigins$container<- recode(episodeOrigins$container, 
+                                  "page-section-rec" = 'Nav Click - Rec',
+                                    "onward-journey-autoplay-next-rec" = 'Autoplay - Rec',
+                                    "page-section-related" = 'Nav Click - Related',
+                                    "onward-journey-autoplay-next-episode" = 'Autoplay - Related')
+                                  
+
+
+
+ggplot(data = episodeOrigins, aes(x = clickGroup, y = perc, fill = clickGroup)) +
+  geom_bar(stat= "identity", position = "fill", width=1, color="black", aes(alpha=container))+
+  scale_alpha_manual(values=c(0.25,0.5,0.75,1.0), name = "Click Type Colour Scale")+
+  scale_y_continuous(labels=percent_format())+
+  geom_text(data=subset(episodeOrigins, perc > 0.05),
+            aes(label=paste0(sprintf("%1.f", 100*perc,"%")),
+                group = container),
+            position = position_stack(vjust = 0.5),
+            colour="black")+
+  coord_cartesian(ylim = c(0, 1))+
+  ylab("Percentage of Content Clicks from Each Type")+
+  scale_x_discrete(name = "Click Group", labels= c("All Content", "Nav Click Content"))+
+  ggtitle("Type of Click Taking Users From One Episode Page to Another  \n PS_IPLAYER - Big Screen - 2020-01-15 to 2020-01-29")+
+  scale_fill_manual(values =c( "#037301","#043570"))+
+  #scale_fill_brewer(name = "Container",
+   #                 palette = "Blues", direction = -1)+
+  theme(legend.position="bottom", legend.box = "horizontal")+
+  guides(fill = "none") #this removed the legend for scale_fill_manual
+```
+
+Of those people who leave content via the navigation bar, 50% + 15% arrived using the navigation bar. Normally only 10+4% use that to get from one episode to another. 
+If they use the nav bar to get to content, they're very likely to use it again. 
+So if they use it, they're big users.
+
+Maybe for this graph we only need the % of those using the nav bar. 
 
