Added sankey diagram showing user's origin to destination

--- a/TV Onward Journey Navigation.Rmd
+++ b/TV Onward Journey Navigation.Rmd
@@ -65,8 +65,11 @@ nextEpInfo <- read.csv("next_ep_type_Jan2020.csv", header = TRUE)
 nextEpInfo <- nextEpInfo %>% rename(clickTime_sec = time_since_content_start_sec)
 nextEpInfo <- nextEpInfo %>% rename(menuType = menu_type)
 nextEpInfo <- nextEpInfo %>% rename(uv = unique_visitor_cookie_id)
+nextEpInfo <- nextEpInfo %>% rename(nav_click_event_position = nav_select_event_position)
 nextEpInfo <- na.omit(nextEpInfo)
 nextEpInfo$visit_id <-as.character(nextEpInfo$visit_id)
+nextEpInfo<- nextEpInfo %>% mutate(nextEpClass = paste(same_brand,same_brand_series,next_ep))
+
 
 #Create Sankey Diagram
 nodes = data.frame("name" = factor(c("All Clicks",
@@ -102,14 +105,43 @@ allClicksSankey <- sankeyNetwork(Links = links, Nodes = nodes, Source = "source"
               NodeGroup = "group", colourScale = colours, fontSize = 12)
 
 
-htmlwidgets::onRender(allClicksSankey, jsCode =
-        'function(){
-          document.getElementsByTagName("svg")[0].setAttribute("viewBox", "");
-          document.getElementsByTagName("svg")[1].setAttribute("viewBox", "");
-          document.getElementsByTagName("svg")[2].setAttribute("viewBox", "");
-          document.getElementsByTagName("svg")[3].setAttribute("viewBox", "");
-          document.getElementsByTagName("svg")[4].setAttribute("viewBox", "");
-        }')
+# htmlwidgets::onRender(allClicksSankey, jsCode =
+#         'function(){
+#           document.getElementsByTagName("svg")[0].setAttribute("viewBox", "");
+#           document.getElementsByTagName("svg")[1].setAttribute("viewBox", "");
+#           document.getElementsByTagName("svg")[2].setAttribute("viewBox", "");
+#           document.getElementsByTagName("svg")[3].setAttribute("viewBox", "");
+#           document.getElementsByTagName("svg")[4].setAttribute("viewBox", "");
+#         }')
+
+onRender(allClicksSankey,
+         '
+function(el, x) {
+    var sankey = this.sankey;
+    var path = sankey.link();
+    var nodes = d3.selectAll(".node");
+    var link = d3.selectAll(".link")
+    var width = el.getBoundingClientRect().width - 40;
+    var height = el.getBoundingClientRect().height - 40;
+
+    window.dragmove = function(d) {
+      d3.select(this).attr("transform", 
+        "translate(" + (
+           d.x = Math.max(0, Math.min(width - d.dx, d3.event.x))
+            ) + "," + (
+            d.y = Math.max(0, Math.min(height - d.dy, d3.event.y))
+          ) + ")");
+      sankey.relayout();
+      link.attr("d", path);
+    };
+
+    nodes.call(d3.drag()
+      .subject(function(d) { return d; })
+      .on("start", function() { this.parentNode.appendChild(this); })
+      .on("drag", dragmove));
+  }
+  '
+)
 
 ```
 
@@ -176,14 +208,14 @@ nextEpInfoDest <- nextEpInfo %>% mutate(nextEpClass = paste(same_brand,same_bran
 
 
 #turn binary into labels
-nextEpClass <- data.frame("nextEpClass" = c("1 1 1","1 1 0","1 0 1","1 0 0","0 0 0"),
+nextEpClassDF <- data.frame("nextEpClass" = c("1 1 1","1 1 0","1 0 1","1 0 0","0 0 0"),
                "clickDestination" = c("Same Brand & Series, Next Ep",
                                       "Same Brand & Series, Diff Ep", 
                                       "Same Brand, Diff Series, Next Ep",
                                       "Same Brand, Diff Series, Diff Ep",
                                       "New Brand"))
 
-nextEpInfoDest<- left_join(nextEpInfoDest, nextEpClass, by = "nextEpClass")
+nextEpInfoDest<- left_join(nextEpInfoDest, nextEpClassDF, by = "nextEpClass")
 nextEpInfoDest$nextEpClass <- factor(nextEpInfoDest$nextEpClass, levels=c("1 1 1","1 1 0","1 0 1","1 0 0","0 0 0"))
 nextEpInfoDest$clickDestination <- factor(nextEpInfoDest$clickDestination, levels=c("Same Brand & Series, Next Ep", "Same Brand & Series, Diff Ep", "Same Brand, Diff Series, Next Ep","Same Brand, Diff Series, Diff Ep","New Brand"))
 
@@ -249,6 +281,8 @@ navClickOrigins$content_click_placement<- recode(navClickOrigins$content_click_p
 
 navClickOrigins$content_click_placement<- factor(navClickOrigins$content_click_placement, 
                                                  levels =c('homepage', 'tleo', 'episode', 'channels', 'categories', 'deeplink', 'search', 'other') )
+navClickOrigins<- navClickOrigins %>% rename(uv = unique_visitor_cookie_id)
+navClickOrigins$visit_id <-as.character(navClickOrigins$visit_id)
 
 
 #nextEpInfo <- nextEpInfo %>% rename(clickTime_sec = time_since_content_start_sec)
@@ -444,12 +478,223 @@ ggplot(episodeOrigins, aes(x = clickGroup, y = perc, fill = clickGroup)) +
         axis.ticks.x=element_blank())
 ```
 
-Of those people who leave content via the navigation bar, 50% + 15% arrived using the navigation bar. Normally only 10+4% use that to get from one episode to another. 
-If they use the nav bar to get to content, they're very likely to use it again. 
-So if they use it, they're big users.
-
-Maybe for this graph we only need the % of those using the nav bar. 
 
 
 # Full Journeys
+For a piece of content being viewed the origin of the click to the content was joined to the user's destination once clicking the onward journey navigation bar.The flow of these journeys is shown below.
 
+
+```{r fullJourneySankey, echo = FALSE}
+#Join the origin of content to the destination of the content
+originToDestination<- 
+  left_join(nextEpInfo %>% select(dt, uv, visit_id,nav_click_event_position, menuType, clickTime_sec, nextEpClass),
+            navClickOrigins%>% select(dt, uv, visit_id,nav_click_event_position, content_click_placement),
+            by =c("dt", "uv", "visit_id", "nav_click_event_position")) %>% arrange(desc(dt,uv,visit_id))
+originToDestination<- na.omit(originToDestination) 
+
+originToDestinationSummary<- originToDestination %>%
+group_by(content_click_placement, nextEpClass)%>%
+  summarise(numEachMenu = n()) %>%
+  mutate(perc = numEachMenu/sum(numEachMenu)) %>%
+  arrange(desc(perc))
+
+#Join in click destination names to binary to make to easier to read
+originToDestinationSummary<- left_join(originToDestinationSummary, nextEpClassDF, by = "nextEpClass")
+
+originToDestinationSummary$nextEpClass<- factor(originToDestinationSummary$nextEpClass, 
+                                                levels= c("0 0 0","1 0 1","1 0 0","1 1 1","1 1 0"))
+originToDestinationSummary$clickDestination<- factor(originToDestinationSummary$clickDestination, 
+                                                levels=  c("New Brand",
+                                                           "Same Brand, Diff Series, Next Ep", 
+                                                           "Same Brand, Diff Series, Diff Ep",
+                                                           "Same Brand & Series, Next Ep",
+                                                           "Same Brand & Series, Diff Ep"))
+
+
+allToOrigin<- originToDestination %>%
+  group_by(content_click_placement)%>%
+  summarise(total = n())
+
+allToOrigin$content_click_placement<- factor(allToOrigin$content_click_placement, levels = c('episode','homepage', 'channels','categories','tleo', 'deeplink','search','other'))
+allToOrigin<- allToOrigin %>% arrange(content_click_placement) %>%
+  mutate(startNode = 0,endNode = c(1,2,3,4,5,6,7,8))%>%
+  select(-content_click_placement)
+
+originNums<- data.frame("content_click_placement" = 
+                          factor(c('episode','homepage',
+                                   'channels',
+                                   'categories',
+                                   'tleo',
+                                   'deeplink',
+                                   'search',
+                                   'other')),
+                        "startNode" = c(1,2,3,4,5,6,7,8))
+
+destinationNums<- data.frame("clickDestination" = 
+                               factor(c("New Brand",
+                                        "Same Brand & Series, Next Ep",
+                                        "Same Brand & Series, Diff Ep",
+                                        "Same Brand, Diff Series, Next Ep",
+                                        "Same Brand, Diff Series, Diff Ep")),
+                        "endNode" = c(9,10,11,12,13))
+
+sankeyFullJourneyDF<- originToDestinationSummary %>% 
+  left_join(originNums, by="content_click_placement")
+sankeyFullJourneyDF<- sankeyFullJourneyDF %>%
+  left_join(destinationNums, by = "clickDestination")
+
+sankeyValues<- sankeyFullJourneyDF %>% 
+  group_by(startNode, endNode) %>% 
+  summarise(total = sum(numEachMenu)) %>%
+  bind_rows(allToOrigin)%>%
+  arrange(startNode)
+
+
+nodes = data.frame("name" = factor(c('all clicks',
+                                     'episode - 32%',
+                                     'homepage - 31%',
+                                     'channels - 16%',
+                                     'categories - 9%',
+                                     'tleo - 8%',
+                                     'deeplink - 3%',
+                                     'search - 1%',
+                                     'other - 0.3',
+                                     "New Brand - 9%",
+                                     "Same Brand & Series, Next Ep - 23%",
+                                     "Same Brand & Series, Diff Ep - 51%",
+                                     "Same Brand, Diff Series, Next Ep - 0.3%",
+                                     "Same Brand, Diff Series, Diff Ep - 16%")),
+                   "group" = as.character(c(0,1,2,3,4,5,6,7,8,9,10,11,12,13)))
+
+ links <- data.frame(source =c(0,	0,	0,	0,	0,	0,	0,	0,	1,	1,	1,	1,	1,	2,	2,	2,	2,	2,	3,	3,	3,	3,	3,	4,	4,	4,	4,	4,	5,	5,	5,	5,	5,	6,	6,	6,	6,	6,	7,	7,	7,	7,	7,	8,	8,	8,	8,	8),
+                     target = c(1,	2,	3,	4,	5,	6,	7,	8,	9,	10,	11,	12,	13,	9,	10,	11,	12,	13,	9,	10,	11,	12,	13,	9,	10,	11,	12,	13,	9,	10,	11,	12,	13,	9,	10,	11,	12,	13,	9,	10,	11,	12,	13,	9,	10,	11,	12,	13),
+                    value = c(2061061,	1972029,	1013925,	562396,	524383,	164281,	19950,	32381,	341084,	423609,	957353,	10483,	328532,	107022,	541730,	1014535,	8593,	300149,	39424,	171071,	658042,	223,	145165,	27577,	130202,	294270,	144,	110203,	63868,	150186,	207838,	1884,	100607,	14723,	36503,	84867,	246,	27942,	2779,	2177,	9003,	73,	5918,	2412,	7385,	16400,	36,	6148))
+
+# links<- matrix(byrow = T, ncol = 3,
+#                           sankeyValues)
+# links<-data.frame(links)
+names(links) <- c("source","target","value")
+nodes$group<-as.factor(c("a","b","c","d","e","f","g","h","i","j","k","l","m","n"))
+
+colours <- 'd3.scaleOrdinal() .domain(["a","b","c","d","e","f","g","h","i","j","k","l","m"])
+.range(["#043570","#043570","#043570","#043570","#043570","#043570","#043570","#043570","#043570",
+"#F21A00","#3B9AB2", "#78B7C5","#E1AF00","#EBCC2A"])'
+
+#lengths should be the same
+#length(unique(c(links$source, links$target)))
+#length(nodes$group)
+
+sankeyJourney<- sankeyNetwork(
+  Links = links,
+  Nodes = nodes,
+  Source = "source",
+  Target = "target",
+  Value = "value",
+  NodeID = "name",
+  NodeGroup = "group",
+  colourScale = colours,
+  fontSize = 12,
+  iterations = 0)#this puts the order as in the nodes dataframe
+
+
+onRender(sankeyJourney,
+         'function(el, x) {
+    var sankey = this.sankey;
+    var path = sankey.link();
+    var nodes = d3.selectAll(".node");
+    var link = d3.selectAll(".link")
+    var width = el.getBoundingClientRect().width - 40;
+    var height = el.getBoundingClientRect().height - 40;
+
+    window.dragmove = function(d) {
+      d3.select(this).attr("transform",
+        "translate(" + (
+           d.x = Math.max(0, Math.min(width - d.dx, d3.event.x))
+            ) + "," + (
+            d.y = Math.max(0, Math.min(height - d.dy, d3.event.y))
+          ) + ")");
+      sankey.relayout();
+      link.attr("d", path);
+    };
+
+    nodes.call(d3.drag()
+      .subject(function(d) { return d; })
+      .on("start", function() { this.parentNode.appendChild(this); })
+      .on("drag", dragmove));}') #This makes it moveable
+```
+
+
+For a more detailed look at the difference in navigation usage depending on the user's route to the content, the destination of the navigation bar usage is shown for each origin. 
+
+Users coming from another episode are far more likely to move onto another brand than users from any other location. Users coming from the channels page are far more likely to go onto another episode of the same series, most likely because the channels page shows users the most recent series, but always directs users to episode one regardless of if they've watched any episodes prior.
+
+Of the users coming from the homepage, 78% move to another episode of the same series, the highest proportion from any origin page. As 88.5% of homepage clicks come from the continue watching rail and 65% of clicks to the onward navigation came within one minute of arriving on the content, this clearly supports the hypothesis that users consistently use this path to get to their next epsiode, that is to say the episode they want to view, rather than that which the system determines to be their next episode. For example when a users watches episode one on iPlayer and then views episode two on linear TV, the system determines their next episode to be episode two, but they actually want to watch episode three. It is important to bear in mind that only 10% of visits contain clicks to this navigation bar, so this is by no means the behaviour of the majority.
+
+```{r originToDestination, echo = FALSE, fig.height = 15, fig.width = 10}
+
+# create summary table
+originToDestinationSummary<- originToDestination %>%
+group_by(content_click_placement, nextEpClass)%>%
+  summarise(numEachMenu = n()) %>%
+  mutate(perc = numEachMenu/sum(numEachMenu)) %>%
+  arrange(desc(perc))
+
+#create df for names to convert binary to readable names
+originToDestinationSummary<- left_join(originToDestinationSummary, nextEpClassDF, by = "nextEpClass")
+
+#Create summary table for each origin
+originTotalPerc<- originToDestination %>%
+  group_by(content_click_placement)%>%
+  summarise(numEachMenu = n()) %>%
+  mutate(perc = numEachMenu/sum(numEachMenu)) %>%
+  arrange(desc(perc)) %>% select(-numEachMenu) %>%
+  mutate(clickDestination = "Same Brand & Series, Diff Ep")
+
+#Set factor levels
+originToDestinationSummary2<-originToDestinationSummary
+originToDestinationSummary2$nextEpClass<- factor(originToDestinationSummary2$nextEpClass,
+                                                levels= c("1 1 0","1 1 1","1 0 0","1 0 1","0 0 0"))
+originToDestinationSummary2$clickDestination<- factor(originToDestinationSummary2$clickDestination,
+                                                     levels=  c("Same Brand & Series, Diff Ep",
+                                                                "Same Brand & Series, Next Ep",
+                                                                "Same Brand, Diff Series, Diff Ep",
+                                                                "Same Brand, Diff Series, Next Ep",
+                                                                "New Brand"))
+originToDestinationSummary2$content_click_placement<- factor(originToDestinationSummary2$content_click_placement,
+                                                            levels = c('episode',
+                                                                       'homepage',
+                                                                       'channels',
+                                                                       'categories',
+                                                                       'tleo',
+                                                                       'deeplink',
+                                                                       'search',
+                                                                       'other'))
+
+ggplot(data = originToDestinationSummary2, 
+       aes(x=clickDestination, y=perc, fill = clickDestination))+
+  geom_bar(stat = "identity")+
+  scale_y_continuous(limits = c(0,1), breaks = c(0,0.1,0.2,0.3,0.4,0.5,0.6,0.7), 
+                     labels = percent_format())+
+  geom_label(data = originTotalPerc,
+             aes(label = paste0("                ","Origin for ",round(100*perc,0), "% of clicks"),
+             fill = NULL,
+             y = 0.8,
+             x = 1))+
+  geom_text(data=subset(originToDestinationSummary2, perc > 0.05),
+           aes(label=paste0(sprintf("%1.f", 100*perc),"%"),
+               group = nextEpClass),
+           position = position_stack(vjust = 0.5),
+           colour="black")+
+  ylab("Percentage of Journeys")+
+  ggtitle(" Percentage of Content Clicks from Each Origin to Each Destination \n PS_IPLAYER - Big Screen - 2020-01-15 to 2020-01-29")+
+  scale_fill_manual(name = "Click Destination", values=(wes_palette(n=5, name="Zissou1")))+
+  xlab("")+
+  theme_classic() +
+  facet_wrap(~ content_click_placement, ncol = 2, nrow = 4, scales = "fixed") +
+  theme(legend.position = "bottom",
+        legend.box = "horizontal", 
+        axis.title.x=element_blank(),
+        axis.text.x=element_blank(),
+        axis.ticks.x=element_blank()) +
+  guides(fill = guide_legend(override.aes = aes(label = ""), nrow = 3,byrow = TRUE ))
+```
